<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PathFinder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_search">Search Games</string>
    <string name="action_create">Create Game</string>
    <string name="title_activity_create_game">createGame</string>
    <string name="game_name">What\'s the name of the game?</string>
    <string name="task_num">How many tasks are there?</string>
    <string name="time_limit_check">Is there a time limit?</string>
    <string name="next_button">Next</string>
    <string name="pick_time">Pick Start Time</string>
    <string name="action_profile">View Profile</string>
    <string name="action_logout">Logout</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="fifth">Fifth</string>
    <string name="enter_task">Enter a Task</string>
    <string name="date_picker">Pick a Date</string>
    <string name="create_game">Finalize</string>
    <string name="zip_code">Enter your zip code</string>
    
    <string-array name="task_num_array">
        <item>5</item>
        <item>10</item>
    </string-array>

</resources>
