<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!--  Search for Games Add Icon element later! -->
    <item 
        android:id="@+id/action_search"      
        android:title="@string/action_search"
        android:showAsAction="never" />
    
    <item 
        android:id="@+id/action_create"
        android:title="@string/action_create"
        android:showAsAction="never" />
    
    <!-- Settings, should always be in overflow -->
    <item 
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never" />
    <item android:id="@+id/action_profile" android:title="@string/action_profile"></item>
    <item android:id="@+id/action_logout" android:title="@string/action_logout" android:showAsAction="never"></item>

</menu>
